--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
-@charset "UTF-8";
-html{
-box-sizing: border-box; }
+@charset "UTF-8"
+/*setjum bara box-sizing: border-box á allt því það var gert síðast :P */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+  /*fjarlægja margin og padding, veit ekki afhvejru samt*/
+  padding: 0;
+  margin: 0;
+}
