@import variables bætt við styles.scss

--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@ html {
 }
 
 @import "scss/header";
+@import "scss/variables";
 @import "scss/heading";
 @import "scss/cover";
 @import "scss/grid";
