--- a/scss skrár/header.scss
+++ b/scss skrár/header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   width: 100%;
   max-width: $max-width;
@@ -8,6 +8,6 @@ header {
   background-size: cover;
 }
 
-header .content {
+.header .content {
   margin: auto;
 }
