--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,41 @@
-@charset "UTF-8"
+@charset "UTF-8";
 /*setjum bara box-sizing: border-box á allt því það var gert síðast :P */
 html {
-  box-sizing: border-box;
-}
+  /* stylelint-disable-line */
+  box-sizing: border-box; }
 
 *, *:before, *:after {
+  /* stylelint-disable-line */
   box-sizing: inherit;
   /*fjarlægja margin og padding, veit ekki afhvejru samt*/
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
+
+html {
+  /* stylelint-disable-line */
+  margin-right: 20px;
+  margin-left: 20px;
+  font-family: Lato, helvetica, arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5; }
+  @media (min-width: 1200px) {
+    html {
+      margin: 0; } }
+
+img {
+  /* stylelint-disable-line */
+  max-width: 100%; }
+
+main {
+  /* stylelint-disable-line */
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow-x: hidden; }
+
+/*@import "scss/grid";
+@import "scss/header";
+@import "scss/heading";
+@import "scss/text";
+@import "scss/button";
+@import "scss/card";
+@import "scss/cardlist";*/
