--- a/styles.scss
+++ b/styles.scss
@@ -1,25 +1,28 @@
+// breytur fyrir mikið notaðar stærðir
+$max-width: 1200px;
+$gutter: 20px;
 
 /*setjum bara box-sizing: border-box á allt því það var gert síðast :P */
-html {
+html { /* stylelint-disable-line */
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*, *:before, *:after { /* stylelint-disable-line */
   box-sizing: inherit;
   /*fjarlægja margin og padding, veit ekki afhvejru samt*/
   padding: 0;
   margin: 0;
 }
 
-@import "scss/header";
-@import "scss/variables";
-@import "scss/heading";
-@import "scss/cover";
 @import "scss/grid";
-@import "scss/button";
+@import "scss/header";
+@import "scss/heading";
 @import "scss/text";
-@import "scss/blockquote";
-@import "scss/footer";
-@import "scss/cardlist";
+@import "scss/button";
 @import "scss/card";
+@import "scss/cardlist";
+@import "scss/variables";
 @import "scss/form";
+@import "scss/footer";
+@import "scss/cover";
+@import "scss/blockquote";
