--- a/styles.scss
+++ b/styles.scss
@@ -1,19 +1,17 @@
-// breytur fyrir mikið notaðar stærðir
 $max-width: 1200px;
 $gutter: 20px;
 
-/*setjum bara box-sizing: border-box á allt því það var gert síðast :P */
-html { /* stylelint-disable-line */
+html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after { /* stylelint-disable-line */
+*, *:before, *:after {
   box-sizing: inherit;
-  /*fjarlægja margin og padding, veit ekki afhvejru samt*/
   padding: 0;
   margin: 0;
 }
 
+/*
 @import "scss/grid";
 @import "scss/header";
 @import "scss/heading";
@@ -26,3 +24,4 @@ html { /* stylelint-disable-line */
 @import "scss/footer";
 @import "scss/cover";
 @import "scss/blockquote";
+*/
