Qimport bætt við header scss

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,5 @@
+@import "scss/variables";
+
 .header {
   display: flex;
   width: 100%;
@@ -6,6 +8,7 @@
   flex-direction: column;
   background: transparent url('img/bg.jpg') no-repeat fixed 50% 50%;
   background-size: cover;
+  font-size: 200px;
 }
 
 .header .content {
