--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@ html {
   display: flex;
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto 40px;
+  margin-bottom: 40px;
   flex-direction: column;
   background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-  background-size: cover; }
+  background-size: cover;
+  font-size: 200px; }
 
 .header .content {
   margin: auto; }
