--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@ html {
   margin-bottom: 40px;
   flex-direction: column;
   background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-  background-size: cover;
-  font-size: 200px; }
+  background-size: cover; }
 
 .header .content {
   margin: auto; }
