--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,10 +1,9 @@
-@import "scss/variables";
-
 .header {
   display: flex;
   width: 100%;
   max-width: $max-width;
-  margin-bottom: $gutter * 2;
+  min-height: 100vh;
+  margin: 0 auto $gutter * 2;
   flex-direction: column;
   background: transparent url('img/bg.jpg') no-repeat fixed 50% 50%;
   background-size: cover;
