--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ html {
   display: flex;
   width: 100%;
   max-width: 1200px;
-  margin-bottom: 40px;
+  min-height: 100vh;
+  margin: 0 auto 40px;
   flex-direction: column;
   background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
   background-size: cover; }
