--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,7 +1,13 @@
 @import "scss/variables";
 .form{
+  max-width: $max-width;
+  margin: $gutter $gutter*2;
+  display: flex;
 
-  &__section{
-    margin:auto;
+  .section{
+    margin: $gutter $gutter*3;
+    display: flex;
+    flex-direction: column;
+
   }
 }
