--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,6 @@ html {
   padding: 0;
   margin: 0; }
 
-html {
-  margin-right: 20px;
-  margin-left: 20px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-img {
-  max-width: 100%;
-}
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow-x: hidden;
-}
-
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -70,5 +52,11 @@ main {
   .heading--three {
     font-size: 1em; }
 
-.form__section {
-  margin: auto; }
+.form {
+  max-width: 1200px;
+  margin: 20px 40px;
+  display: flex; }
+  .form .section {
+    margin: 20px 60px;
+    display: flex;
+    flex-direction: column; }
