--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,15 @@ html {
   margin-left: 20px;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 img {
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 main {
   max-width: 1200px;
   margin: 0 auto;
-  overflow-x: hidden;
-}
+  overflow-x: hidden; }
 
 .row {
   display: flex;
@@ -69,3 +66,6 @@ main {
     font-size: 2em; }
   .heading--three {
     font-size: 1em; }
+
+.form__section {
+  margin: auto; }
