--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,13 +1,21 @@
 @import "scss/variables";
 .form{
+  /*
   max-width: $max-width;
-  margin: $gutter $gutter*2;
+  margin: $gutter $gutter;
   display: flex;
+  flex-wrap: wrap;*/
+  @media (max-width: 400px){
 
-  .section{
-    margin: $gutter $gutter*3;
+  }
+
+  /*.section{
+    max-width: $col*2;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;*/
+
+  }
+  .item{
 
   }
 }
