--- a/styles.css
+++ b/styles.css
@@ -67,5 +67,23 @@ main {
   .heading--three {
     font-size: 1em; }
 
+.cardlist__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -10px;
+  margin-left: -10px; }
+
+.cardlist__col {
+  width: 100%;
+  display: flex;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0 0 20px; }
+  @media (min-width: 600px) {
+    .cardlist__col {
+      width: 33.33333%;
+      margin-left: 0;
+      margin-right: 0; } }
+
 .form__section {
   margin: auto; }
