--- a/styles.css
+++ b/styles.css
@@ -67,17 +67,18 @@ main {
   .heading--three {
     font-size: 1em; }
 
-.text {
-  font-size: 1rem; }
-
-.form__section {
-  margin: auto; }
-
 .form {
-  max-width: 1200px;
-  margin: 20px 20px;
-  display: flex; }
-  .form .section {
-    margin: 20px 60px;
+  /*
+  max-width: $max-width;
+  margin: $gutter $gutter;
+  display: flex;
+  flex-wrap: wrap;*/
+  /*.section{
+    max-width: $col*2;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;*/ }
+
+.blockquote {
+  display: flex;
+  font-style: italic;
+  margin: 40px; }
