--- a/scss/blockquote.scss
+++ b/scss/blockquote.scss
@@ -1,9 +1,23 @@
 @import "scss/variables";
 
 .blockquote{
-  display: flex;
-  font-style: italic;
+  align-content: flex-end;
   margin: 2*$gutter;
+
+  &--one {
+    font-style: italic;
+    display: flex;
+    align-items: flex-end;
+
+
+  }
+
+  &--two {
+
+  }
+
+
+
 
 
 }
