--- a/scss/blockquote.scss
+++ b/scss/blockquote.scss
@@ -1,19 +1,20 @@
 @import "scss/variables";
 
 .blockquote{
-  align-content: flex-end;
-  margin: 2*$gutter;
+  @include columns(6);
+  margin: 0 auto;
+  float: right;
+  padding: 2*$gutter;
 
   &--one {
     font-style: italic;
-    display: flex;
-    align-items: flex-end;
-
+    font-size: 1.5em;
 
   }
 
   &--two {
-
+    font-size: 0.75em;
+    margin-top: $gutter;
   }
 
 
