--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,3 +1,36 @@
-.card{
+.card {
+  width: 100%;
+  max-width: 500px;
+  //max-width: columns(4);
+  overflow: hidden;
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+  }
+
+  &__blockquote {
+    font-style: italic;
+    font-size: 2em;
+  }
+
+  &__name {
+    font-size: 1em;
+  }
+
+  &__text {
+    font-size: 12px;
+  }
+
+  &__img {
+    border-radius: 100%;
+  }
+
+  /*&__content {
+    @media (min-width: 600px) {
+      align-items: flex-start;
+    }
+  }*/
 }
