--- a/styles.css
+++ b/styles.css
@@ -1,102 +1,23 @@
-html {
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0; }
-
-html {
-  margin-right: 20px;
-  margin-left: 20px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5; }
-
-img {
-  max-width: 100%; }
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow-x: hidden; }
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -10px;
-  margin-bottom: 20px;
-  margin-left: -10px; }
-
-.col {
-  padding-right: 10px;
-  padding-left: 10px; }
-  .col-12 {
-    width: 100%; }
-  .col-6 {
-    width: 50%; }
-  .col-4 {
-    width: 33.33333%; }
-  @media (max-width: 599px) {
-    .col-sm-12 {
-      width: 100%; }
-    .col-sm-6 {
-      width: 50%; }
-    .col-sm-4 {
-      width: 33.33333%; } }
-
-.header {
-  display: flex;
+.card {
   width: 100%;
-  max-width: 1200px;
-  min-height: 100vh;
-  margin: 0 auto 40px;
-  flex-direction: column;
-  background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-  background-size: cover; }
-
-.header .content {
-  margin: auto; }
-
-.heading {
-  font-family: 'Roboto Slab', serif; }
-  .heading--one {
-    font-size: 3em; }
-  .heading--two {
-    font-size: 1em; }
-  .heading--three {
-    font-size: 1em; }
-
-<<<<<<< HEAD
-.cardlist__row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -10px;
-  margin-left: -10px; }
-
-.cardlist__col {
-  width: 100%;
-  display: flex;
-  padding-right: 10px;
-  padding-left: 10px;
-  margin: 0 0 20px; }
-  @media (min-width: 600px) {
-    .cardlist__col {
-      width: 33.33333%;
-      margin-left: 0;
-      margin-right: 0; } }
-
-.text {
-  font-size: 1rem; }
-
-.form__section {
-  margin: auto; }
-
-.form {
-  max-width: 1200px;
-  margin: 20px 20px;
-  display: flex; }
-  .form .section {
-    margin: 20px 60px;
+  max-width: 500px;
+  overflow: hidden;
+  /*&__content {
+    @media (min-width: 600px) {
+      align-items: flex-start;
+    }
+  }*/ }
+  .card__content {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-items: center;
+    padding: 15px; }
+  .card__blockquote {
+    font-style: italic;
+    font-size: 2em; }
+  .card__name {
+    font-size: 1em; }
+  .card__text {
+    font-size: 12px; }
+  .card__img {
+    border-radius: 100%; }
