--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,7 +1,6 @@
 .card {
   width: 100%;
-  max-width: 500px;
-  //max-width: columns(4);
+  padding: $gutter;
   overflow: hidden;
 
   &__content {
@@ -12,12 +11,19 @@
   }
 
   &__blockquote {
+    display: flex;
+    align-items: center;
+    margin-bottom: $gutter;
     font-style: italic;
-    font-size: 2em;
+    font-size: 18px;
+    background: pink;
   }
 
   &__name {
+    display: flex;
+    align-items: baseline;
     font-size: 1em;
+    background: green;
   }
 
   &__text {
@@ -25,7 +31,9 @@
   }
 
   &__img {
+    width: 100%;
     border-radius: 100%;
+    margin-bottom: $gutter;
   }
 
   /*&__content {
