--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -8,7 +8,7 @@
   &--two {
     font-size: 1em;
     margin-bottom: $gutter;
-    margin-top: 2*$gutter;
+    margin-top: $gutter;
   }
 
   &--three {
