--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,11 +1,17 @@
+@import "scss/variables";
+
 .header {
-  display: flex;
+  /*display: flex;
   width: 100%;
   max-width: $max-width;
   min-height: 100vh;
   margin: 0 auto $gutter * 2;
   flex-direction: column;
+  background-size: cover;*/
+  background: url(header.jpg) fixed;
   background-size: cover;
+  background-position: 50% 50%;
+  padding: 12rem;
 
   &--one {
     background: transparent url('img/bg.jpg') no-repeat fixed 50% 50%;
@@ -16,6 +22,6 @@
   }
 
   &--two {
-
-  }  
+    background: transparent url('img/bg-subpage.jpg') no-repeat fixed 50% 50%;
+  }
 }
