--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -2,13 +2,13 @@
   font-family: 'Roboto Slab', serif;
 
   &--one {
-    font-size: 3em;
+    font-size: 4em;
   }
 
   &--two {
-    font-size: 1em;
+    font-size: 1.5em;
     margin-bottom: $gutter;
-    margin-top: $gutter;
+    margin-top: 4*$gutter;
   }
 
   &--three {
