--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,39 @@ main {
       margin-left: 0;
       margin-right: 0; } }
 
+.list__item {
+  width: 100%;
+  padding: 20px;
+  overflow: hidden; }
+  .list__item__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; }
+  .list__item__img {
+    max-width: 10px;
+    width: 100%; }
+  .list__item__image {
+    width: 50%;
+    padding-right: 10px;
+    padding-left: 10px; }
+
+.list__col {
+  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0 0 20px; }
+  @media (min-width: 600px) {
+    .list__col {
+      width: 50%;
+      padding-right: 10px;
+      padding-left: 10px;
+      margin-left: 0;
+      margin-right: 0; } }
+
 .form {
   /*
   max-width: $max-width;
