--- a/styles.scss
+++ b/styles.scss
@@ -37,6 +37,7 @@ main {
 @import "scss/button";
 @import "scss/card";
 @import "scss/cardlist";
+@import "scss/listitem";
 @import "scss/list";
 @import "scss/variables";
 @import "scss/form";
