header og bar scss og html

--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,3 +1,23 @@
-.button{
+.button {
+  //text-align: center;
 
+.content {
+  /*color: white;
+  max-width: 256px;
+  min-width: 256px;
+  padding: 10px 5px 10px 5px;
+  border: 1px solid #666;
+  border-radius: 4px;
+  color: #eee;
+  background-color: #666;
+  cursor: pointer;
+  font-size: 1rem;
+  text-decoration: none;
+  flex-basis: 100%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 auto;*/
+}
 }
