--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,25 @@ main {
   margin-bottom: 20px;
   font-style: normal; }
 
+.button .content {
+  /*color: white;
+  max-width: 256px;
+  min-width: 256px;
+  padding: 10px 5px 10px 5px;
+  border: 1px solid #666;
+  border-radius: 4px;
+  color: #eee;
+  background-color: #666;
+  cursor: pointer;
+  font-size: 1rem;
+  text-decoration: none;
+  flex-basis: 100%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 auto;*/ }
+
 .card {
   width: 100%;
   padding: 20px;
@@ -174,3 +193,37 @@ main {
       margin: 0 auto;
       float: right;
       padding: 40px 0 40px 40px; } }
+
+.bar {
+  background-color: rgba(0, 0, 0, 0.8);
+  font-family: 'Roboto Slab', serif;
+  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: inline-block;
+  text-align: center;
+  padding: 10px; }
+  .bar .button--one {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 1.5em;
+    color: white;
+    cursor: pointer;
+    float: left; }
+  .bar .button--two {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    float: right; }
+  .bar .button--three {
+    color: white;
+    background-color: #666;
+    outline: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    float: right; }
