--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,24 +1,35 @@
 @import "scss/variables";
 .form{
   max-width: $max-width;
-  /*
-  margin: $gutter $gutter;
   display: flex;
-  flex-wrap: wrap;*/
+  flex-direction: column;
+  flex-wrap: wrap;
 
-  @media (max-width: 400px){
+  &__section{
     display: flex;
     flex-direction: column;
+    @include columns(4);
+    &__items{
+      max-width: 100%;
+
+      &__item{
+        display: block;
+        max-width: 100%;
+      }
+    }
+  }
+
+  @media (min-width: 600px){
+    flex-wrap: nowrap;
+    flex-direction: row;
+    &__section{
+      flex-direction: column;
+    }
+  }
+
+  @media (min-width: 1200px){
 
   }
 
-  .section{
-    @include colums(4);
-    /*max-width: $col*2;
-    display: flex;
-    flex-direction: column;*/
-  }
 
-  input{
-      width: 100%;
-  }
+}
