--- a/styles.css
+++ b/styles.css
@@ -121,18 +121,26 @@ main {
 
 .form {
   max-width: 1200px;
-  /*
-  margin: $gutter $gutter;
   display: flex;
-  flex-wrap: wrap;*/
-  /*.section{
-    max-width: $col*2;
+  flex-direction: column;
+  flex-wrap: wrap; }
+  .form__section {
     display: flex;
-    flex-direction: column;*/ }
-  @media (max-width: 400px) {
+    flex-direction: column;
+    width: 33.33333%;
+    padding-right: 10px;
+    padding-left: 10px; }
+    .form__section__items {
+      max-width: 100%; }
+      .form__section__items__item {
+        display: block;
+        max-width: 100%; }
+  @media (min-width: 600px) {
     .form {
-      display: flex;
-      flex-direction: column; } }
+      flex-wrap: nowrap;
+      flex-direction: row; }
+      .form__section {
+        flex-direction: column; } }
 
 .blockquote {
   width: 50%;
