--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,8 +1,8 @@
 .button {
-  //text-align: center;
+  text-align: center;
 
-.content {
-  /*color: white;
+  &--one {
+  color: white;
   max-width: 256px;
   min-width: 256px;
   padding: 10px 5px 10px 5px;
@@ -18,6 +18,6 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin: 0 auto;*/
+  margin: 0 auto;
 }
 }
