--- a/styles.css
+++ b/styles.css
@@ -49,15 +49,14 @@ main {
   width: 100%;
   min-height: 95vh;
   display: cover;
-  max-width: 1200px; }
+  max-width: 1200px;
+  opacity: 0.9; }
   .header--one {
     background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-    background-size: cover;
-    background-position: 0 0; }
+    background-size: cover; }
   .header--one .content {
     margin: auto;
     text-align: center;
-    padding: 12rem;
     margin: 0 auto 40px; }
   .header--two {
     background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
@@ -85,24 +84,26 @@ main {
   margin-bottom: 20px;
   font-style: normal; }
 
-.button .content {
-  /*color: white;
-  max-width: 256px;
-  min-width: 256px;
-  padding: 10px 5px 10px 5px;
-  border: 1px solid #666;
-  border-radius: 4px;
-  color: #eee;
-  background-color: #666;
-  cursor: pointer;
-  font-size: 1rem;
-  text-decoration: none;
-  flex-basis: 100%;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 0 auto;*/ }
+.button {
+  text-align: center; }
+  .button--one {
+    color: white;
+    max-width: 256px;
+    min-width: 256px;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid #666;
+    border-radius: 4px;
+    color: #eee;
+    background-color: #666;
+    cursor: pointer;
+    font-size: 1rem;
+    text-decoration: none;
+    flex-basis: 100%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 auto; }
 
 .card {
   width: 100%;
