--- a/scss/form.scss
+++ b/scss/form.scss
@@ -5,31 +5,30 @@
   flex-direction: column;
   flex-wrap: wrap;
 
-  &__section{
+  .date{
     display: flex;
-    flex-direction: column;
-    @include columns(4);
-    &__items{
-      max-width: 100%;
+    justify-content: space-between;
+  }
 
-      &__item{
-        display: block;
-        max-width: 100%;
-      }
-    }
+  .labels{
+    width: 100%;
+    flex-grow: 2;
+  }
+
+  .items{
+    width: 100%;
+    flex-grow: 2;
   }
 
   @media (min-width: 600px){
-    flex-wrap: nowrap;
-    flex-direction: row;
-    &__section{
-      flex-direction: column;
-    }
+    display: inline-flex;
+    flex-direction: column;
+    margin: 0 $gutter;
+    justify-content: space-around;
   }
 
   @media (min-width: 1200px){
 
   }
-
 
 }
