--- a/styles.css
+++ b/styles.css
@@ -164,23 +164,21 @@ main {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap; }
-  .form__section {
+  .form .date {
     display: flex;
-    flex-direction: column;
-    width: 33.33333%;
-    padding-right: 10px;
-    padding-left: 10px; }
-    .form__section__items {
-      max-width: 100%; }
-      .form__section__items__item {
-        display: block;
-        max-width: 100%; }
+    justify-content: space-between; }
+  .form .labels {
+    width: 100%;
+    flex-grow: 2; }
+  .form .items {
+    width: 100%;
+    flex-grow: 2; }
   @media (min-width: 600px) {
     .form {
-      flex-wrap: nowrap;
-      flex-direction: row; }
-      .form__section {
-        flex-direction: column; } }
+      display: inline-flex;
+      flex-direction: column;
+      margin: 0 20px;
+      justify-content: space-around; } }
 
 .blockquote {
   width: 100%;
