--- a/scss/list.scss
+++ b/scss/list.scss
@@ -1,8 +1,14 @@
 .list {
+  &__row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -10px;
+    margin-left: -10px;
+  }
+
   &__col {
     @include columns(12);
     display: flex;
-    flex-wrap: wrap;
     padding-right: 10px;
     padding-left: 10px;
     margin: 0 0 20px;
