--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,9 @@ main {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap; }
+  .form .boxes {
+    border-radius: 2px 2px 2px 2px;
+    -webkit-appearance: none; }
   .form .date {
     display: flex;
     justify-content: space-between; }
@@ -172,6 +175,8 @@ main {
     width: 100%;
     flex-grow: 2; }
   .form .items {
+    border-radius: 2px 2px 2px 2px;
+    -webkit-appearance: none;
     width: 100%;
     flex-grow: 2; }
   @media (min-width: 600px) {
