--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,23 +1,27 @@
 .button {
-  text-align: center;
-
-  &--one {
-  color: white;
-  max-width: 256px;
-  min-width: 256px;
-  padding: 10px 5px 10px 5px;
+  margin: 0 auto;
+  padding: 10px 5px;
   border: 1px solid #666;
   border-radius: 4px;
+  width: 100%;
+  max-width: 256px;
+
   color: #eee;
   background-color: #666;
-  cursor: pointer;
-  font-size: 1rem;
+
   text-decoration: none;
-  flex-basis: 100%;
   text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 0 auto;
-}
+  font-size: 1rem;
+
+  &--one { //niðri á form síðu
+
+  }
+
+  &--two { //uppi á index síðu
+
+  }
+
+  &--three { //niðri á index síðu
+
+  }
 }
