--- a/styles.css
+++ b/styles.css
@@ -52,14 +52,13 @@ main {
   opacity: 0.9; }
   .header--one {
     background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
-    background-size: cover;
-    background-position: 0 0; }
+    background-size: cover; }
   .header--one .content {
     margin: auto;
     text-align: center;
     margin: 0 auto 40px; }
   .header--two {
-    background: transparent url("img/bg-subpage.jpg") no-repeat;
+    background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
     background-position: 0 0; }
   .header--two .content {
@@ -85,25 +84,17 @@ main {
   font-style: normal; }
 
 .button {
-  text-align: center; }
-  .button--one {
-    color: white;
-    max-width: 256px;
-    min-width: 256px;
-    padding: 10px 5px 10px 5px;
-    border: 1px solid #666;
-    border-radius: 4px;
-    color: #eee;
-    background-color: #666;
-    cursor: pointer;
-    font-size: 1rem;
-    text-decoration: none;
-    flex-basis: 100%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin: 0 auto; }
+  margin: 0 auto;
+  padding: 10px 5px;
+  border: 1px solid #666;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 256px;
+  color: #eee;
+  background-color: #666;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1rem; }
 
 .card {
   width: 100%;
