--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,7 @@ main {
       margin-right: 0; } }
 
 .form {
+  background-color: pink;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
@@ -215,20 +216,34 @@ main {
   .form .date {
     display: flex;
     justify-content: space-between; }
-  .form .labels {
-    width: 100%;
-    flex-grow: 2; }
-  .form .items {
-    border-radius: 2px 2px 2px 2px;
-    -webkit-appearance: none;
-    width: 100%;
-    flex-grow: 2; }
+    .form .date .labels {
+      width: 100%;
+      flex-grow: 2;
+      text-align: center; }
+    .form .date .boxes {
+      border-radius: 2px 2px 2px 2px;
+      -webkit-appearance: none;
+      width: 100%;
+      flex-grow: 2;
+      text-align: center; }
   @media (min-width: 600px) {
     .form {
-      display: inline-flex;
-      flex-direction: column;
-      margin: 0 20px;
-      justify-content: space-around; } }
+      /*
+    justify-content: space-between;
+    margin: 0 $gutter;
+    */ } }
+  @media (min-width: 1200px) {
+    .form {
+      /*@include columns(4);
+    display:inline-flex;
+    justify-content: space-around;
+    &--one{
+      margin: 0 $gutter*5 0 $gutter*4.6;
+    }
+
+    &--two {
+      margin: 0 $gutter*4.6 0 $gutter*5.05;
+    }*/ } }
 
 .blockquote {
   width: 100%;
