alls konar git add ./Users/asdiserla/Downloads/Adobe\ Photoshop\ CS5\ Extended\ 12.0\ Final\ For\ MAC\ \[x.86\ \&\ x.64\]\[WwW.ZoNaTorrent.CoM\]\]/Keymaker/KeyMaker ; exit;

--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -44,4 +44,20 @@
     }
   }
 
+  &-smm {
+    @media (max-width: 399px) {
+      &-12 {
+        @include columns(12);
+      }
+
+      &-6 {
+        @include columns(6);
+      }
+
+      &-4 {
+        @include columns(4);
+      }
+    }
+  }
+
 }
