--- a/scss/list.scss
+++ b/scss/list.scss
@@ -1,22 +1,31 @@
-.list {
-  &__row {
+.item {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
+  margin: $gutter * 4 0;
+
+  &__content {
     display: flex;
-    flex-wrap: wrap;
-    margin-right: -10px;
-    margin-left: -10px;
+    flex-direction: column;
+    width: 100%;
   }
 
-  &__col {
-    @include columns(12);
-    display: flex;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin: 0 0 20px;
+  &__heading {
+    font-family: 'Roboto Slab', serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 5px;
+  }
 
-    @media (min-width: 600px) {
-      @include columns(6);
-      margin-left: 0;
-      margin-right: 0;
-    }
+  &__text {
+    font-size: 1em;
+  }
+
+  &__img {
+    height: 25px;
+    width: 25px;
+
   }
 }
