--- a/styles.css
+++ b/styles.css
@@ -261,35 +261,8 @@ main {
       padding: 40px 0 40px 40px; } }
 
 .bar {
-  background-color: rgba(0, 0, 0, 0.8);
-  font-family: 'Roboto Slab', serif;
-  width: 100%;
-  padding-right: 10px;
-  padding-left: 10px;
-  display: inline-block;
-  text-align: center;
-  padding: 10px; }
-  .bar .button--one {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 1.5em;
-    color: white;
-    cursor: pointer;
-    float: left; }
-  .bar .button--two {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    color: white;
-    cursor: pointer;
-    font-size: 1rem;
-    float: right; }
-  .bar .button--three {
-    color: white;
-    background-color: #666;
-    outline: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-    float: right; }
+  background-color: rgba(0, 0, 0, 0.7);
+  list-style: none; }
+  .bar--content a {
+    text-decoration: none;
+    color: white; }
