--- a/scss/bar.scss
+++ b/scss/bar.scss
@@ -1,5 +1,19 @@
 @import "scss/variables";
 
+.prufa {
+  display: flex;
+
+  &--one {
+
+    float: left;
+  }
+
+  &--two {
+    float: right;
+  }
+
+}
+
 .bar  {
   background-color: rgba(0, 0, 0, 0.7);
   list-style: none;
@@ -7,18 +21,17 @@
   &--content a {
     text-decoration: none;
     color: white;
-
   }
 
   &--one {
-
+    //align-self: flex-start;
   }
 
   &--two {
-
+    //align-self: flex-end;
   }
 
   &--three {
-
+    //align-self: flex-end;
   }
 }
