--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   box-sizing: border-box; }
 
@@ -45,20 +44,12 @@ main {
       width: 50%; }
     .col-sm-4 {
       width: 33.33333%; } }
-  @media (max-width: 399px) {
-    .col-smm-12 {
-      width: 100%; }
-    .col-smm-6 {
-      width: 50%; }
-    .col-smm-4 {
-      width: 33.33333%; } }
 
 .header {
   width: 100%;
   min-height: 95vh;
   max-width: 1200px;
-  opacity: 0.9;
-  margin: 0 auto; }
+  opacity: 0.9; }
   .header--one {
     background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
@@ -87,8 +78,7 @@ main {
     margin-bottom: 20px;
     margin-top: 80px; }
   .heading--three {
-    font-size: 1em;
-    text-align: center; }
+    font-size: 1em; }
 
 .text {
   margin-bottom: 20px;
@@ -169,66 +159,82 @@ main {
       margin-right: 0; } }
 
 .item {
-  display: flex;
-  flex-direction: row;
   width: 100%;
-  padding: 0;
-  overflow: hidden;
-  margin: 80px 0; }
+  padding: 20px;
+  overflow: hidden; }
   .item__content {
     display: flex;
     flex-direction: column;
-    width: 100%; }
+    justify-content: center;
+    width: 100%;
+    background: pink; }
   .item__heading {
     font-family: 'Roboto Slab', serif;
     font-size: 18px;
-    font-weight: bold;
-    margin-left: 5px; }
+    font-weight: bold; }
   .item__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .item__p {
     font-size: 1em; }
   .item__img {
-    height: 25px;
-    width: 25px; }
+    display: flex;
+    flex-direction: row;
+    max-width: 20px;
+    width: 20px;
+    background: green; }
+  .item__image {
+    max-width: 100%;
+    width: 100%; }
+
+.list__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -10px;
+  margin-left: -10px; }
+
+.list__col {
+  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: flex;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0 0 20px; }
+  @media (min-width: 600px) {
+    .list__col {
+      width: 50%;
+      padding-right: 10px;
+      padding-left: 10px;
+      margin-left: 0;
+      margin-right: 0; } }
 
 .form {
-  background-color: pink;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  /*
-  @media (min-width: 600px){
-    /*
-    justify-content: space-between;
-    margin: 0 $gutter;
-    */ }
+  flex-wrap: wrap; }
   .form .boxes {
     border-radius: 2px 2px 2px 2px;
     -webkit-appearance: none; }
   .form .date {
     display: flex;
     justify-content: space-between; }
-    .form .date .labels {
-      width: 100%;
-      flex-grow: 2;
-      text-align: center; }
-    .form .date .boxes {
-      border-radius: 2px 2px 2px 2px;
-      -webkit-appearance: none;
-      width: 100%;
-      flex-grow: 2;
-      text-align: center; }
-
-@media (min-width: 1200px) {
-  /*
-    &--one{
-      margin: 0 $gutter*2 0 0; upp, hægri, niður, vinstri
-    }
-
-    &--two {
-      margin: 0 auto;
-    }
-  }*/ }
+  .form .labels {
+    width: 100%;
+    flex-grow: 2; }
+  .form .items {
+    border-radius: 2px 2px 2px 2px;
+    -webkit-appearance: none;
+    width: 100%;
+    flex-grow: 2; }
+  @media (min-width: 600px) {
+    .form {
+      display: inline-flex;
+      flex-direction: column;
+      margin: 0 20px;
+      justify-content: space-around; } }
 
 .blockquote {
   width: 100%;
