--- a/scss/header.scss
+++ b/scss/header.scss
@@ -32,4 +32,18 @@
     color: white;
     word-break: break-all;
   }
+
+//búin að finna hvaða gæja þarf að nota í animationið :)
+  .heading {
+    &--two {
+      background: green;
+    }
+    &--one {
+      background: green;
+    }
+  }
+  .container .button {
+    background: green;
+
+  }
 }
