--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ main {
   .header--one .content {
     margin: auto;
     text-align: center;
-    margin: 0 auto 40px; }
+    margin: 0 auto 40px;
+    word-break: break-all; }
   .header--two {
     background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
