--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -60,4 +60,16 @@
     }
   }
 
+  &-fluid{
+    @include columns(4);
+
+    @media (max-width: 599px){
+      @include columns(6);
+    }
+
+    @media (max-width: 399px){
+      @include columns(12);
+    }
+  }
+
 }
