--- a/styles.css
+++ b/styles.css
@@ -126,21 +126,16 @@ main {
     .container .button--two {
       padding: 10px 90px; }
     .container .button--three {
+      margin-top: 20px;
       padding: 10px 60px; }
 
 .card {
   width: 100%;
   padding: 20px;
   overflow: hidden;
-  /*&__content {
-    @media (min-width: 600px) {
-      align-items: flex-start;
-    }
-  }*/ }
+  padding: 15px; }
   .card__content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 15px; }
   .card__blockquote {
     display: flex;
@@ -151,7 +146,7 @@ main {
     background: pink; }
   .card__name {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
     font-size: 1em;
     background: green; }
   .card__text {
@@ -159,30 +154,12 @@ main {
   .card__img {
     width: 100%;
     border-radius: 100%;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    padding: 15px; }
+  @media (min-width: 600px) {
+    .card__content {
+      align-items: flex-start; } }
 
-/*.cardlist {
-  &__row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -10px;
-    margin-left: -10px;
-  }
-
-  &__col {
-    @include columns(12);
-    display: flex;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin: 0 0 20px;
-
-    @media (min-width: 600px) {
-      @include columns(4);
-      margin-left: 0;
-      margin-right: 0;
-    }
-  }
-}*/
 .item {
   display: flex;
   flex-direction: row;
@@ -305,6 +282,7 @@ main {
       display: initial;
       background-color: #666;
       border-radius: 4px;
-      padding: 0 20px;
+      padding: 3px 20px;
       max-height: 30px;
-      align-self: center; } }
+      align-self: center;
+      margin: auto; } }
